# learnopengl-tutorial

./: CMakeLists.txt  README.md
src/: Shader.cpp  Shader.h  main.cpp
src/shaders/: first_box.fs  first_box.vs  second_box.fs  second_box.vs
